<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.RegisterFragment">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="310dp"
        android:layout_height="510dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@color/material_dynamic_neutral_variant40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:helperTextTextColor="#E30707"
                app:startIconDrawable="@drawable/userrr">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="60dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:hint="@string/surname"
                app:helperTextTextColor="#E30707"
                app:startIconDrawable="@drawable/userrr">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:hint="@string/e_mail"
                app:helperTextTextColor="#E30707"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/telephone_number"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:helperTextTextColor="#E30707"
                app:startIconDrawable="@drawable/phonenumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:maxLength="11"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#E30707"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/password_again"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#E30707"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtContract"
                    android:layout_width="131dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/conract_agreement"
                    android:textColor="#8A8686"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:text="@string/contract_Accept" />


            </LinearLayout>

            <Button
                android:id="@+id/btnRegister1"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/yellow"
                android:text="@string/btn_register"
                android:textColor="#F6F6F6" />

            <Button
                android:id="@+id/btnLogin2"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/btn_login" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/btn_register"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="313dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/markakod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />


</androidx.constraintlayout.widget.ConstraintLayout>