<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParentFragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:background="#B1AEAE"
        android:backgroundTint="#C7CED1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPerson"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/edit"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/editPerson"
            android:layout_width="384dp"
            android:layout_height="165dp"
            android:src="@drawable/profileuser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPersonName"
                android:layout_width="204dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="204dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/surname"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtPersonEmail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/e_mail"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/txtPersonContract"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:drawableEnd="@drawable/contract"
            android:gravity="center"
            android:text="@string/conract_agreement"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtAboutUs"
            android:layout_width="181dp"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/info"
            android:gravity="center"
            android:text="Hakkımızda"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtPersonSettings"
            android:layout_width="174dp"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/settings"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtPersonExit"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/exit"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="#000000"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>